# system

./: CMakeLists.txt  SysRes.h  bank.cpp  bank.h  main.cpp  memory.cpp  memory.h  pcb.h  process.cpp  process.h  process_control.h
